[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/cascade/cascade_hud.gd" id="1_hud"]

[node name="CascadeHud" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Menu"

[node name="CurrencyIcon" type="Label" parent="TopBar"]
layout_mode = 2
text = "Coins:"

[node name="CurrencyLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BallCountLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Balls: 0"
